# krilldata

./: LICENSE  README.md  pyproject.toml
config/: classifier_params.json  download_params.json  map_params.json  model_params.json
krilldata/: __init__.py  dataFusion.py  downloadCop.py  exploreNC.py  krillClassify.py  krillHurdle.py  krillPredict.py  krillTrain.py  krillXGBoost.py  map_params.json  model_params.json  readkrillbase.py
usage/: allTrain.py  classifyKrill.py  hurdleKrill.py  krillbase.py  mapKrill.py  performPlot.py  response.py  train.py
