[tool.poetry]
name = "krilldata"
version = "0.1.0"
description = ""
authors = ["Cian Kelly <cianrkelly23@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
pandas = "^2.2.3"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
